<resources>
    <string name="app_name">NoteTaker</string>
    <string name="save">Save</string>
    <string name="date">Date :</string>
    <string name="note">Note :</string>
    <string name="title">Title :</string>
    <string name="addnote">Add Note</string>
    <string name="Save">Save</string>
    <string name="DateDefaultValue">-</string>
    <string name="Edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="Deletemessage">Are you sure you want to delete this note? It can\'t be undone!</string>
    <string name="ConfirmDelete">Confirm Delete</string>
</resources>
